Twitter feed on frontpage

--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@ title: Home
 				</ul>
 				{% endcomment %}
 			</div>
+			
+			{% twitter https://twitter.com/scholarslab maxwidth=500 limit=2 %}
+			
 			<p class="home-hours__cta"><a href="/work" aria-label="hours and spaces page">Our Work</a></p>
 		</section>
 
