Update workshop event info and makerspace page

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -24,7 +24,7 @@ order: 3
 <div class="makerspace-main-content">
   <div class="makerspace__ethos">
   <div class="banner" style="border: 5px solid #00FFFF; padding: 20px;">
-    <h2>We have moved!</h2>
+    <h2>New Location!</h2>
     <p>The Main Library is being renovated and is currently closed. The
     Scholars' Lab and the Makerspace have moved next door to the Clemons
     Library 3rd Floor.</p>
@@ -53,9 +53,10 @@ order: 3
 
   <div class="makerspace__hours">
     <div id="makerspace-hours" class="maker-hours__title">Fall 2020 Hours and Access</div>
-    <p>Due to concerns with COVID-19, the Makerspace is open for use by
-    appointment only. To schedule a time to use the space and resources,
-    contact <a
+    <p>The Makerspace staff will be delivering consultation and instruction
+    remotely, via Zoom or pre-recorded video tutorials. If in person
+    consultation is needed, it may be available by appointment. Please send all
+    inquiries to <a
       href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
   </div>
 
@@ -66,7 +67,6 @@ order: 3
       <div class="maker-staff__list">
         <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities, Sewing<br/>
       </div>
-      <!--
       <div class="maker-students__label">Student Technologists</div>
         <div class="maker-students__list">
           <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
@@ -74,7 +74,6 @@ order: 3
           <span>Brandon Phan:</span>3D Printing, 3D Modeling<br/>
         </div>
       </div>
-    -->
       <div class="maker-people__staff">
         <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
         <div class="maker-staff__list">
@@ -91,26 +90,31 @@ order: 3
     <div class="maker-usage__content"> <!-- split internally per prototype drawing -->
       <p>Interested in exploring the Makerspace?  Have an idea to use
       microcontrollers or 3D modeling to enhance your research or differently
-      interrogate your assumptions?  Stop by to talk to one of our
+      interrogate your assumptions?  Contact us at <a
+        href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
+      to schedule an appointment with a Makerspace Technologist or
+      Scholars&#8217; Lab staff to discuss your planned project.
+
+      <!--Stop by to talk to one of our
       Technologists, attend our maker <a
         href="http://scholarslab.org/events/">workshops</a>, or contact us at
       <a
         href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
       to schedule an appointment with a Makerspace Technologist or
-      Scholars&#8217; Lab staff to discuss your planned project.</p> </div>
+      Scholars&#8217; Lab staff to discuss your planned project.
+      -->
+    </p> </div>
   </div>
 
   <div class="makerspace__calendar" id="calendar-link">
     <h3>3D Printing</h3>
-    <p>We are now in Clemons Library on the 3rd floor. We do not have any 3D
-    printers available in the Makerspace. All 3D printing is now
-    available through the 3D Printing Studio in the Robertson Media Center
-    (just across the room). To schedule training and reserve a printer, please
-    see here for available printers: <a
+    <p>All 3D printing is now available through the 3D Printing Studio in the
+    Robertson Media Center (just across the room). To schedule training and
+    reserve a printer, please see here for available printers: <a
       href="https://cal.lib.virginia.edu/equipment?lid=241&gid=8343">https://cal.lib.virginia.edu/equipment?lid=241&gid=8343</a> And see
     here for available training: or email <a
-      href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> <p>Check here
-    for printer availability.</p>
+      href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a>
+    <p>Check here for printer availability.</p>
     <a href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">https://cal.lib.virginia.edu/reserve/SLab3DPrinters</a>
 
   </div>
