Add PDF to workshop page

--- a/pages/makerspace/workshops/arduino-workshop.html
+++ b/pages/makerspace/workshops/arduino-workshop.html
@@ -50,6 +50,8 @@ permalink: /makerspace/workshops/arduino/
   <h3>Other Formats</h3>
   <p>This content is available in these other formats:</p>
   <ul>
+    <li><a
+      href="/assets/post-media/makerspace/workshops/Arduino-Workshop.pdf">PDF</a></li>
     <li><a href="https://docs.google.com/document/d/17ZyGGMX1q9RDdsL8jENoUzzx44oKB3hSBI4ngNfksDA/edit?usp=sharing">Doc
         File</a></li>
     <li><a
