--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -53,7 +53,7 @@ order: 3
   </div>
 
   <div class="makerspace__hours">
-    <div id="makerspace-hours" class="maker-hours__title">Fall 2020 Hours and Access</div>
+    <div id="makerspace-hours" class="maker-hours__title">2020-2021 Hours and Access</div>
     <p>The Makerspace staff will be delivering consultation and instruction
       remotely, via Zoom or pre-recorded video tutorials. If in person
       consultation is needed, it may be available by appointment. Please send all
