--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ title: Home
 
 			<div class="home-contact__wrapper">
 				<div class="home-contact__content">
-					<p>We’ve moved! The Scholars’ Lab offices and Makerspace are now located in <a href="https://www.library.virginia.edu/map#clemons">Clemons</a> Library (on 3rd floor in the Robertson Media Center).  We are working remotely during Fall 2020, but we look forward to getting back to Clemons when we can. It will be our home away from home until the completion of the <a href="https://www.library.virginia.edu/renovation">renovation of the main library</a>, scheduled for 2023. </p>
+					<p>We’ve moved! The Scholars’ Lab offices and Makerspace are now located in <a href="https://www.library.virginia.edu/map#clemons">Clemons</a> Library (on 3rd floor in the Robertson Media Center).  We are working remotely during 2020-2021, but we look forward to getting back to Clemons when we can. It will be our home away from home until the completion of the <a href="https://www.library.virginia.edu/renovation">renovation of the main library</a>, scheduled for 2023. </p>
 					<p>Curious? Please get in touch—absolutely no prior experience or fully formed ideas needed!</p>
 					<p>Email us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with questions, or to set up a time to meet. Sign up for our newsletter to hear about events and opportunities!</p>
 				</div>
@@ -144,7 +144,7 @@ title: Home
 			<!-- !! NB: events description is commented out; feel free to un-comment out if we want to use it -->
 			<!--div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="/events" aria-label="Events page">here</a>.</div-->
 			
-			<p>We host a wide array of public events and speakers. We teach workshops on tools and methods that enhance your courses and research. However, this Fall, all our events will be virtual. Visit <a href="https://scholarslab.lib.virginia.edu/events">our Events Page</a> to see our complete calendar. </p>
+			<p>We host a wide array of public events and speakers. We teach workshops on tools and methods that enhance your courses and research. However, this year, all our events will be virtual. Visit <a href="https://scholarslab.lib.virginia.edu/events">our Events Page</a> to see our complete calendar. </p>
 
             {% assign events = "" | split: "" %}
             {% assign allevents = site.events | sort: 'start_date' %}
@@ -205,8 +205,7 @@ title: Home
 			<div class="home-maker__text">
 				<p><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like wearable circuitry and virtual reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.
 </p>
-<p><strong>FALL 2020 Update</strong>: With the closing of the main library for renovation, the Makerspace has moved next door to Clemons (3rd floor, in the Robertson Media Center). Our staff is always available at <a href="mailto:slabmakerspace@virginia.edu"> slabmakerspace@virginia.edu</a>, but for up-to-date information about spaces and equipment, see the <a href="https://www.library.virginia.edu/status">Library’s Status Dashboard</a>.
-</p>
+<p><strong>COVID-19 Update</strong>: The Makerspace staff will be delivering consultation and instruction remotely, via Zoom or pre-recorded video tutorials. If in-person consultation is needed, it may be available by appointment <a href="https://www.library.virginia.edu/hours">whenever Clemons is open</a>. Please send all inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
 			</div>
 
 			<div class="home-maker__cta"><a href="/makerspace/">Makerspace Home</a></div> 
