--- a/pages/makerspace/workshops/arduino-workshop.html
+++ b/pages/makerspace/workshops/arduino-workshop.html
@@ -347,8 +347,8 @@ nav: false
                   First, there is a flat spot on the &ldquo;brim&rdquo; of the LED to
                   denote the negative side. Second, the &ldquo;leads&rdquo; or legs
                   of the LED are different lengths. The positive, or
-                  &ldquo;cathode&rdquo; side is longer. The negative, or
-                  &ldquo;anode&rdquo; side is shorter. Just as a plus sign has more
+                  &ldquo;anode&rdquo; side is longer. The negative, or
+                  &ldquo;cathode&rdquo; side is shorter. Just as a plus sign has more
                   to it than a negative sign, the positive lead is longer than the
                   negative.
                 </li>
