--- a/pages/makerspace/workshops/arduino-workshop.html
+++ b/pages/makerspace/workshops/arduino-workshop.html
@@ -535,7 +535,7 @@ nav: false
               is a function that doesn&rsquo;t return any information, it just
               does something, so it is a &lsquo;void&rsquo; function. The name of
               the function is &lsquo;setup&rsquo;. The parentheses designate if
-              we can pass information to the variable when it is called/run/used.
+              we can pass information to the function when it is called/run/used.
               In this case there is nothing. Then finally, we have an open curly
               brace to say, this is where the function&rsquo;s code starts, and a
               closing curly brace on line 4 to say, this is where the setup
