Add links to tutorials

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -157,10 +157,21 @@ order: 3
   <div class="makerspace__resource">
     <div class="maker-resource__title">Resources</div>
     <h3>Workshops</h3>
+    <p>Resources to teach a workshop</p>
     <ul>
       <li>
         <a href="/makerspace/workshops/arduino/">Arduino Workshop - Basics of Electricity and Circuits</a>
       </li>
+    </ul>
+    <h3>Tutorials</h3>
+    <p>Resources to learn at your own pace</p>
+    <ul>
+      <li>
+        <a href="https://ammonshepherd.github.io/arduino-tuts/" target="_blank">Arduino Tutorials</a>
+      </li>
+      <li>
+        <a href="https://ammonshepherd.github.io/make-a-website/" target="_blank">How to make a website</a>
+        </li>
     </ul>
   </div>
 
