New post about tutorials and workshops

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -58,7 +58,7 @@ order: 3
       remotely, via Zoom or pre-recorded video tutorials. If in person
       consultation is needed, it may be available by appointment. Please send all
       inquiries to <a
-        href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
+         href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
 
     <p>Or schedule an online consulation with Ammon.</p>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -105,7 +105,6 @@ order: 3
         <!-- <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics,
              Wearables<br/> -->
         <span>Nora Dale:</span>3D Printing, Textiles, Buttons</br />
-        <span>Brandon Phan:</span>3D Printing, 3D Modeling<br />
       </div>
       <div class="maker-people__staff">
         <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
@@ -125,7 +124,7 @@ order: 3
       <p>Interested in exploring the Makerspace? Have an idea to use
         microcontrollers or 3D modeling to enhance your research or differently
         interrogate your assumptions? Contact us at <a
-          href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
+           href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
         to schedule an appointment with a Makerspace Technologist or
         Scholars&#8217; Lab staff to discuss your planned project.
 
@@ -142,9 +141,9 @@ order: 3
       <p>All 3D printing is now available through the 3D Printing Studio in the
         Robertson Media Center (just across the room). To schedule training and
         reserve a printer, please see here for available printers: <a
-          href="https://cal.lib.virginia.edu/equipment?lid=241&gid=8343">https://cal.lib.virginia.edu/equipment?lid=241&gid=8343</a>
+           href="https://cal.lib.virginia.edu/equipment?lid=241&gid=8343">https://cal.lib.virginia.edu/equipment?lid=241&gid=8343</a>
         or email <a
-          href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with
+           href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with
         questions.
         <!--
         <p>Check here for printer availability.</p>
@@ -156,14 +155,14 @@ order: 3
 
   <div class="makerspace__resource">
     <div class="maker-resource__title">Resources</div>
-    <h3>Workshops</h3>
+    <h3 id="workshop-links">Workshops</h3>
     <p>Resources to teach a workshop</p>
     <ul>
       <li>
         <a href="/makerspace/workshops/arduino/">Arduino Workshop - Basics of Electricity and Circuits</a>
       </li>
     </ul>
-    <h3>Tutorials</h3>
+    <h3 id="tutorial-links">Tutorials</h3>
     <p>Resources to learn at your own pace</p>
     <ul>
       <li>
@@ -171,7 +170,10 @@ order: 3
       </li>
       <li>
         <a href="https://ammonshepherd.github.io/make-a-website/" target="_blank">How to make a website</a>
-        </li>
+      </li>
+      <li>
+        <a href="https://ammonshepherd.github.io/git-for-beginners/" target="_blank">Git for beginners</a>
+      </li>
     </ul>
   </div>
 
@@ -228,7 +230,7 @@ order: 3
     <div class="maker-inventory__rules">
       <p>All equipment is maintained for use in the Makerspace and is not available for check out at this time. Don’t
         see the equipment you need here? Visit <a
-          href="http://makergrounds.virginia.edu">http://makergrounds.virginia.edu</a> for other shops, labs, and places
+           href="http://makergrounds.virginia.edu">http://makergrounds.virginia.edu</a> for other shops, labs, and places
         for making at UVA.</p>
     </div>
   </div>
@@ -237,7 +239,7 @@ order: 3
   <div class="makerspace__questions">
     <div class="maker-questions__text">Questions? Hesitant about joining us in the Makerspace? You belong here, and
       we're happy to meet with you, answer questions, and give you a tour to help you feel more at home. Email <a
-        href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about
+         href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about
       our Makerspace.</div>
   </div>
 </div> <!-- end main content -->
