--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -97,7 +97,7 @@ order: 6
 		<ul class="spatial-faq__list">
 			<ul class="spatial-starting__gis">
 			<h3>Cultural heritage informatics at UVA</h3>
-			<li>Visit our <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">cultural heritage informatics</a> page to learn more about our ongoing projects; view our equipment, data, and demos; and access our 3D data repository.</li>
+			<li>Visit our <a href="https://wordpress.its.virginia.edu/Cultural_Heritage_Data/">cultural heritage informatics</a> page to learn more about our ongoing projects; view our equipment, data, and demos; and access our 3D data repository.</li>
 			<li><a href="/cultural-heritage-informatics-documentation/">Documentation</a> for Cultural Heritage Informatics technologies and methods (funded by UVA Parents Fund)</li>
 			</ul>
 		</ul>
