Fall 2021 homepage 'contact us' update

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ title: Home
 
 			<div class="home-contact__wrapper">
 				<div class="home-contact__content">
-					<p>We’ve moved! The Scholars’ Lab offices and Makerspace are now located in <a href="https://www.library.virginia.edu/map#clemons">Clemons</a> Library (on 3rd floor in the Robertson Media Center).  We are working remotely during 2020-2021, but we look forward to getting back to Clemons when we can. It will be our home away from home until the completion of the <a href="https://www.library.virginia.edu/renovation">renovation of the main library</a>, scheduled for 2023. </p>
-					<p>Curious? Please get in touch—absolutely no prior experience or fully formed ideas needed!</p>
-					<p>Email us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with questions, or to set up a time to meet. Sign up for our newsletter to hear about events and opportunities!</p>
+<p>The Scholars’ Lab offices and TinkerTank (formerly Makerspace) are now located on the 3rd floor of Clemons Library, in the Robertson Media Center. It will be our home away from home until the completion of the <a href="https://www.library.virginia.edu/renovation">renovation of the main library</a>, scheduled for 2023.</p>
+<p>Curious? Please get in touch—absolutely no prior experience or fully formed ideas needed!</p>
+<p>Email us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with questions, or to set up a time to meet. Drop in to the TinkerTank during <a href="https://www.library.virginia.edu/hours">open hours</a>. Sign up for our newsletter to hear about events and opportunities!</p>
 				</div>
 
 				<div class="home-contact__newsletter">
