Fall 2021 homepage events & tinkertank updates

--- a/index.html
+++ b/index.html
@@ -140,10 +140,7 @@ title: Home
 		<!-- events: -->
 		<section class="home__events">
 			<div class="home-events__title"><a href="/events">Events</a></div>
-			<!-- !! NB: events description is commented out; feel free to un-comment out if we want to use it -->
-			<!--div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="/events" aria-label="Events page">here</a>.</div-->
-			
-			<p>We host a wide array of public events and speakers. We teach workshops on tools and methods that enhance your courses and research. However, this year, all our events will be virtual. Visit <a href="https://scholarslab.lib.virginia.edu/events">our Events Page</a> to see our complete calendar. </p>
+<p>We host a wide array of public events and speakers. We teach workshops on tools and methods that enhance your courses and research. Visit <a href="https://scholarslab.lib.virginia.edu/events">our Events Page</a> to see our complete calendar of virtual and in-person programming.</p>
 
             {% assign events = "" | split: "" %}
             {% assign allevents = site.events | sort: 'start_date' %}
@@ -196,18 +193,17 @@ title: Home
 
 		<!-- makerspace -->
 		<section class="home__makerspace">
-			<div class="home-maker__title"><a href="/makerspace/">Makerspace</a></div>
+			<div class="home-maker__title"><a href="/makerspace/">TinkerTank</a></div>
 <!--
 			<p>We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See <a href="https://scholarslab.lib.virginia.edu/makerspace/#calendar-link">our full hours calendar</a> for actual hours on any given day.</p>
 -->
 
 			<div class="home-maker__text">
-				<p><strong>The Scholars’ Lab Makerspace</strong> is a place for tinkering and experimentation with technologies like wearable circuitry and virtual reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.
-</p>
-<p><strong>COVID-19 Update</strong>: The Makerspace staff will be delivering consultation and instruction remotely, via Zoom or pre-recorded video tutorials. If in-person consultation is needed, it may be available by appointment <a href="https://www.library.virginia.edu/hours">whenever Clemons is open</a>. Please send all inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
+<p><strong>The Scholars’ Lab TinkerTank</strong> (formerly Makerspace) is a place for tinkering and experimentation with technologies like wearable circuitry and virtual reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
+<p>The TinkerTank staff provides consultation and instruction whenever the <a href="https://www.library.virginia.edu/hours/">TinkerTank is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
 			</div>
 
-			<div class="home-maker__cta"><a href="/makerspace/">Makerspace Home</a></div> 
+			<div class="home-maker__cta"><a href="/makerspace/">TinkerTank Home</a></div> 
 		</section>
 
 		<!-- spatial tech: -->
