--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -100,15 +100,14 @@ order: 3
     <div class="maker-people__students">
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
-        <span>Kavya Annapareddy:</span>3D Printing, Textiles, Buttons</br />
-        <span>Tyler Campbell:</span>3D Modeling, Crafting, Buttons</br />
-        <span>Nora Dale:</span>3D Printing, Textiles, Sewing, Buttons</br />
-        <span>Annabel Gleason:</span>Crafting, Textiles, Buttons</br />
-        <span>Leah Phan:</span>3D Printing, Crafting, Buttons</br />
+        <span>Kavya Annapareddy:</span>Button Making, 3D Printing, Sewing, Wacom Drawing Tablet, Adobe Creative Suite</br />
+        <span>Nora Dale:</span>3D Printing, Textiles, Sewing, Button Making</br />
+        <span>Annabel Gleason:</span>Adobe Creative Suite, Arduino, Raspberry Pi, Textiles</br />
+        <span>Leah Phan:</span>3D Printing, 3D Scanner, Silhouette Cameo, Laminator, Mini Printing Press, Adobe Creative Suite</br />
       </div>
       <div class="maker-students__label">Makerspace Manager &amp; Lead Research Technologist</div>
       <div class="maker-staff__list">
-        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities, Sewing<br />
+        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing<br />
       </div>
       <div class="maker-people__staff">
         <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
