Add newsletter link

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -27,6 +27,8 @@ order: 3
     <div class="banner" style="border: 5px solid #00FFFF; padding: 20px;">
       <h2>New Location!</h2>
       <p>Until the <a href="https://www.library.virginia.edu/renovation">main library is renovated</a>, the Scholars' Lab and the TinkerTank (formerly Makerspace) have moved next door to Clemons Library, 3rd Floor, in the Robertson Media Center.</p>
+      <h2>Newsletter!</h2>
+      <p>Subscribe to the monthly <a href="https://lists.virginia.edu/sympa/subscribe/tinkertank?previous_action=info">TinkerTank newsletter</a>!</p>
     </div>
     <div class="maker-ethos__title">Vision</div>
     <div class="maker-ethos__text">
@@ -41,6 +43,10 @@ order: 3
         understand, and report on emerging technologies, methodologies and
         pedagogies in a variety of disciplines.
       </p>
+      <h2>Newsletter!</h2>
+      <p>Sign up for the monthly <a
+           href="https://lists.virginia.edu/sympa/subscribe/tinkertank?previous_action=info">TinkerTank
+          newsletter</a>!</p>
     </div>
     <div class="maker-ethos__title">Mission</div>
     <div class="maker-ethos__text">
