Update newsletter link

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -28,7 +28,7 @@ order: 3
       <h2>New Location!</h2>
       <p>Until the <a href="https://www.library.virginia.edu/renovation">main library is renovated</a>, the Scholars' Lab and the TinkerTank (formerly Makerspace) have moved next door to Clemons Library, 3rd Floor, in the Robertson Media Center.</p>
       <h2>Newsletter!</h2>
-      <p>Subscribe to the monthly <a href="https://lists.virginia.edu/sympa/subscribe/tinkertank?previous_action=info">TinkerTank newsletter</a>!</p>
+      <p>Subscribe to the monthly <a href="http://eepurl.com/hXIWCb">TinkerTank newsletter</a>!</p>
     </div>
     <div class="maker-ethos__title">Vision</div>
     <div class="maker-ethos__text">
@@ -43,10 +43,7 @@ order: 3
         understand, and report on emerging technologies, methodologies and
         pedagogies in a variety of disciplines.
       </p>
-      <h2>Newsletter!</h2>
-      <p>Sign up for the monthly <a
-           href="https://lists.virginia.edu/sympa/subscribe/tinkertank?previous_action=info">TinkerTank
-          newsletter</a>!</p>
+
     </div>
     <div class="maker-ethos__title">Mission</div>
     <div class="maker-ethos__text">
@@ -169,12 +166,17 @@ order: 3
 
   <div class="makerspace__inventory">
     <div class="maker-inventory__title">What&#8217;s in the TinkerTank?</div>
+      <p>All equipment can be reserved for use in the TinkerTank. Use the
+      <a href="https://cal.lib.virginia.edu/equipment?lid=264">Library
+        Equipment Reservation site</a> to reserve equipment.
+      </p>
     <!-- insert subtitle saying that this is a rundown of the inventory. Note here about where the software is located (i.e., on fancy computers located in the TinkerTank - anyone is welcome to come use.) -->
     <div class="maker-inventory__list">
       <!-- Physical Computing -->
       <ul class="maker-list__physical">
         <span>Physical Computing and Electronics</span>
-        <li>Sparkfun Arduino kits, with Arduino UNO and 101 boards and an assortment of Arduino shields.</li>
+        <li>Sparkfun Arduino kits, with Arduino UNO and 101 boards
+          and an assortment of Arduino shields.</li>
         <li>Raspberry Pi version 3, 4 and Zero W</li>
         <li>Soldering irons, solder, helping hands</li>
         <li>Digital multimeters</li>
