Style the link, give it some pop!

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -195,7 +195,7 @@ var week15029 = new $.LibCalWeeklyGrid( $("#s-lc-whw15029"), { iid: 863, lid: 15
     <div class="maker-inventory__title">What&#8217;s in the TinkerTank?</div>
       <div class="maker-inventory__subtitle">
         <p>All equipment can be reserved for use in the TinkerTank. Use the
-        <a href="https://cal.lib.virginia.edu/equipment?lid=264">Library
+        <a id="equipment-btn" href="https://cal.lib.virginia.edu/equipment?lid=264">Library
           Equipment Reservation site</a> to reserve equipment.
         </p>
       </div>
