--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -123,7 +123,7 @@ order: 3
   </div>
 
   <div class="makerspace__people">
-    <div class="maker-people__title">TinkerTank Techs</div>
+    <div class="maker-people__title" id="tinkertank-techs">TinkerTank Techs</div>
     <div class="maker-people__students">
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
