--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -127,18 +127,22 @@ order: 3
     <div class="maker-people__students">
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
-        <span>Kavya Annapareddy:</span>Button Making, 3D Printing, Sewing, Wacom Drawing Tablet, Adobe Creative Suite</br />
-        <span>Leah Phan:</span>3D Printing, 3D Scanner, Silhouette Cameo, Laminator, Mini Printing Press, Adobe Creative Suite</br />
+        <span>Kavya Annapareddy:</span>Button Making, 3D Printing, Sewing, Wacom Drawing Tablet, Adobe Creative Suite<br>
+        <span>Sarah Hemler</span>Sewing, 3D Printing, CAD<br>
+        <span>Yejung (Henry) Kim</span>Electronics, CAD<br>
+        <span>Alexa Luborsky:</span>Digital Humanities, Button Making, Silhouette Cameo<br>
+        <span>Leah Phan:</span>3D Printing, 3D Scanner, Silhouette Cameo, Laminator, Mini Printing Press, Adobe Creative Suite<br>
+        <span>Tingyo Tan:</span>CAD, 3D Printing, Electronics, Photogrammetry<br>
       </div>
       <div class="maker-students__label">Makerspace Manager &amp; Lead Research Technologist</div>
       <div class="maker-staff__list">
-        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing<br />
+        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing<br>
       </div>
       <div class="maker-people__staff">
         <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
         <div class="maker-staff__list">
-          <span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br />
-          <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br />
+          <span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br>
+          <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br>
           <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities
         </div>
       </div>
