--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -128,7 +128,7 @@ order: 3
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
         <span>Kavya Annapareddy:</span>Button Making, 3D Printing, Sewing, Wacom Drawing Tablet, Adobe Creative Suite<br>
-        <span>Sarah Hemler</span>Sewing, 3D Printing, CAD<br>
+        <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
         <span>Yejung (Henry) Kim</span>Electronics, CAD<br>
         <span>Alexa Luborsky:</span>Digital Humanities, Button Making, Silhouette Cameo<br>
         <span>Leah Phan:</span>3D Printing, 3D Scanner, Silhouette Cameo, Laminator, Mini Printing Press, Adobe Creative Suite<br>
